--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,13 @@
 .mr-3{
   margin-right: 1em !important;
 }
+.validation-error-label{
+  float: left;
+  margin-bottom: 15px !important;
+}
+.float-left{
+  float:left;
+}
+.text-left{
+  text-align: left !important;
+}
