--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,12 @@
 .App {
   text-align: center;
+  background:rgb(247,247,247);
+}
+body{
+  background:rgb(247,247,247) !important;
 }
 
-.ui.main.container{
+.mt-4{
   margin-top:4em;
 }
 .mr-3{
@@ -17,4 +21,7 @@
 }
 .text-left{
   text-align: left !important;
+}
+.w-100{
+  width:100%;
 }
